fix extra margin

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ body {
 }
 
 #section-5 #qatar-cn {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 #section-5 #pattern-3 {
